--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-ui-components-superflows",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "UI kit for the Superflows design language",
   "author": "superflows-dev",
   "license": "MIT",
@@ -54,5 +54,11 @@
     "bootstrap": "^5.1.3",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-icons": "^1.8.4"
-  }
+  },
+  "keywords": [
+    "react",
+    "superflows",
+    "ui",
+    "components"
+  ]
 }
