--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-ui-components-superflows",
-  "version": "1.0.17",
+  "version": "1.0.18",
   "description": "UI kit for the Superflows design language",
   "author": "superflows-dev",
   "license": "MIT",
@@ -24,7 +24,7 @@
     "deploy": "gh-pages -d example/build"
   },
   "peerDependencies": {
-    "react": "^16.0.0"
+    "react": "^16.0.0||^17.0.0||^18.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
